gateway-test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: podinfo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prd
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: "*.kidibox.net"
      tls:
        certificateRefs:
          - kind: Secret
            name: start-kidibox-net
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-1
  namespace: overseer
spec:
  parentRefs:
    - name: tls-gateway
      namespace: podinfo
  hostnames:
    - "overseer.kidibox.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseer
          port: 8080
